--- a/PapyrusPatch.csproj
+++ b/PapyrusPatch.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishSingleFile>true</PublishSingleFile>
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="mutagen.bethesda" Version="0.48.1" />
+    <PackageReference Include="Mutagen.Bethesda" Version="0.48.1" />
     <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.32.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
