--- a/PapyrusPatch.csproj
+++ b/PapyrusPatch.csproj
@@ -7,11 +7,12 @@
     <Nullable>enable</Nullable>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
+    <CETCompat>false</CETCompat>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mutagen.Bethesda" Version="0.48.1" />
-    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.32.1" />
+    <PackageReference Include="Mutagen.Bethesda" Version="0.49.0" />
+    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.33.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
